test: add test to shipments and payments packages
